Snapshot d456f6c633

* New experimental screenshot code. (marco)

Snapshot e748f756c0

* #4618: Make the shell service more resilient to failure. (tomeu)

Snapshot 39aca0154d

* Get bundle installation to work again. (marco)

Snapshot b6422678e6

* #1941 Call FocusSearch method for popping up the journal. (rwh)

Snapshot 2df96b9af7

* #4552 Allow to open images in Paint (marco)
* #4518: Encode nickname in UTF-8 when writing it out to .sugar/*/config (smcv)
* sugar-control: Use NM for radio on/off, check for superuser (erikos)

Snapshot b72f00e30b

* #4517 Do not require a TakeScreenshot method on the dbus service (marco)
* Add wep type combo. (dcbw)

Snapshot 8c89bfaed7

* #4503: Do some standard Tubes boilerplate in sugar.presence, so activities
  don't have to (smcv)
* #4428 Revert to the trial-3 frame behavior (marco)
* Initial push for the sugar control panel (erikos)
* #4358: pydoc strings for sugar.activity.Activity

Snapshot 176262f2e9

* Added morgs NotifyAlert (timed one button alert) to the alert api (erikos)

Snapshot fdb4e49b14

* Save journal files on nand, not tmpfs (tomeu)

Snapshot 3bae39c06c

* Make <alt> keybindings work again (marco)

Snapshot 606346b18c

* #4238: Handle double BuddyLeft in handle tracking in sugar.presence (morgs)

Snapshot 57402cf309

* Add new keybindings (Ctrl+Q, Ctrl+escape) for close activity (erikos)
* Add a keybinding (alt+space) to activity window to hide/show tray (erikos)

Snapshot efd0bbd326

* Add support to be able to remove an alert which is not the top 
one on the queue (erikos)
* Fullscreen support (hide toolbar and tray) and tray support in activity 
window (erikos)

Snapshot b023dd17a2

* Fix a crash in the emulator (marco)

Snapshot 276e1ee517

* #4266 Avoid misleading warning every time an activity starts (smcv)
* #4027 Try to make sugar.presence log messages less misleading (smcv)

Snapshot 24fbd1ce1c

* Fix the object chooser (marco)

Snapshot 3c7578577d

* Fix the shell service (marco)

Snapshot fa55b5af09