@@ -167,10 +167,12 @@ class _Grid(gobject.GObject):
         self._array[col + row * self.width] = value
 
 
-class SpreadLayout(gobject.GObject,hippo.CanvasLayout):
+class SpreadLayout(gobject.GObject, hippo.CanvasLayout):
     __gtype_name__ = 'SugarSpreadLayout'
-    def __init__(self):
+    def __init__(self, center_vertical_offset=0):
         gobject.GObject.__init__(self)
+
+        self._center_vertical_offset = center_vertical_offset
 
         min_width, width = self.do_get_width_request()
         min_height, height = self.do_get_height_request(width)
@@ -225,9 +227,10 @@ class SpreadLayout(gobject.GObject,hippo.CanvasLayout):
             else:
                 min_w, child_width = child.get_width_request()
                 min_h, child_height = child.get_height_request(child_width)
-                child.allocate(x + (width - child_width) / 2,
-                               y + (height - child_height) / 2,
-                               child_width, child_height, origin_changed)
+                child_x = x + (width - child_width) / 2
+                child_y = y + (height - child_height + self._center_vertical_offset) / 2
+                child.allocate(child_x, child_y, child_width, child_height,
+                               origin_changed)
 
     def _get_child_grid_size(self, child):
         min_width, width = child.get_width_request()
